force-app/main/default/objects/Majors_Product_Matrix__c/Majors_Product_Matrix__c.object-meta.xml
<CustomObject>
    <label>Majors Product Matrix</label>
    <nameField>
        <displayFormat>MPM-{0000}</displayFormat>
        <label>Majors Product Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Majors Product Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>