force-app/main/default/objects/Majors_Product_Matrix__c/fields/Check_Processing__c.field-meta.xml
<CustomField>
    <fullName>Check_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Processing</label>
    <type>Checkbox</type>
</CustomField>