force-app/main/default/objects/Majors_Product_Matrix__c/fields/MCN__c.field-meta.xml
<CustomField>
    <fullName>MCN__c</fullName>
    <description>This will holds the master customer number related to account.</description>
    <externalId>true</externalId>
    <label>MCN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>