force-app/main/default/objects/Majors_Product_Matrix__c/fields/NEW_COMPETETORS__c.field-meta.xml
<CustomField>
    <fullName>NEW_COMPETETORS__c</fullName>
    <description>This is the field used in lightning component to display the list competetors</description>
    <label>NEW COMPETETORS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>