force-app/main/default/objects/Majors_Product_Matrix__c/fields/NOT_SOLD_LIST__c.field-meta.xml
<CustomField>
    <fullName>NOT_SOLD_LIST__c</fullName>
    <description>This is the field used to display not sold items in lightning component</description>
    <label>NOT SOLD LIST</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>