force-app/main/default/objects/Majors_Product_Matrix__c/fields/PRODUCTTOPLINES__c.field-meta.xml
<CustomField>
    <fullName>PRODUCTTOPLINES__c</fullName>
    <description>It holds list of all the product top lines list with ; separator.</description>
    <label>PRODUCTTOPLINES</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>