force-app/main/default/objects/Majors_Product_Matrix__c/fields/PURCHASED_LIST__c.field-meta.xml
<CustomField>
    <fullName>PURCHASED_LIST__c</fullName>
    <description>It holds the purchased products with ; separator symbol</description>
    <label>PURCHASED LIST</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>